# MAI_OOP_Homeworks

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile
lab1/: CMakeLists.txt  main.cpp  test1
lab1/include/: is_number_clean.h
lab1/src/: is_number_clean.cpp
lab1/test/: tests01.cpp
lab2-var11-new/: CMakeLists.txt  main.cpp
lab2-var11-new/include/: exceptions.h  thirteen_num_syst.h  vector.h
lab2-var11-new/src/: thirteen_num_syst.cpp  vector.cpp
lab2-var11-new/tests/: tests.cpp
lab2_var11/: CMakeLists.txt  main.cpp
lab2_var11/include/: exceptions.h  thirteen_num_syst.h  vector.h
lab2_var11/src/: thirteen_num_syst.cpp  vector.cpp
lab2_var11/tests/: tests.cpp
lab3-var20/: CMakeLists.txt  main.cpp
lab3-var20/include/: exceptions.h  figure.h  pentagon.h  rhombus.h  trapezoid.h  vector.h
lab3-var20/src/: figure.cpp  pentagon.cpp  rhombus.cpp  trapezoid.cpp  vector.cpp
lab3-var20/tests/: tests.cpp
lab3-var20_new/: CMakeLists.txt  main.cpp
lab3-var20_new/include/: exceptions.h  figure.h  pentagon.h  rhombus.h  trapezoid.h  vector.h
lab3-var20_new/src/: figure.cpp  pentagon.cpp  rhombus.cpp  trapezoid.cpp  vector.cpp
lab3-var20_new/tests/: tests.cpp
lab4-var12/: CMakeLists.txt  main.cpp
lab4-var12/include/: figure.h  figure.ipp  pentagon.h  pentagon.ipp  rhombus.h  rhombus.ipp  trapezoid.h  trapezoid.ipp  vector.h  vector.ipp
lab4-var12/tests/: tests.cpp
lab5-var9-new/: CMakeLists.txt  main.cpp
lab5-var9-new/include/: memory_resource.cpp  memory_resource.hpp
lab5-var9-new/tests/: tests.cpp
lab5_var9/include/: list.hpp  list.ipp  memory_resource.hpp
lab6-var7/: CMakeLists.txt  main.cpp
lab6-var7/include/: DungeonMap.h
lab6-var7/include/NPC/: bear.h  knight.h  npc.h  npc_factory.h  orc.h
lab6-var7/include/Observer/: console_observer.h  file_observer.h  kill_subject.h  observer.h  subject.h
lab6-var7/include/Visitor/: fight_visitor.h  visitor.h
lab6-var7/src/: DungeonMap.cpp
lab6-var7/src/NPC/: bear.cpp  knight.cpp  npc.cpp  npc_factory.cpp  orc.cpp
lab6-var7/src/Observer/: console_observer.cpp  file_observer.cpp  subject.cpp
lab6-var7/src/Visitor/: fight_visitor.cpp
lab6-var7/tests/: tests.cpp
